# ugv_sdk

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/hunter_demo/: hunter_demo.cpp
apps/scout_demo/: scout_demo.cpp
apps/scout_monitor/: CMakeLists.txt
apps/scout_monitor/app/: CMakeLists.txt
cmake/: ugv_sdkConfig.cmake.in
include/ugv_sdk/bunker/: bunker_can_parser.h
include/ugv_sdk/hunter/: hunter_can_parser.h
include/ugv_sdk/scout/: scout_can_parser.h
include/ugv_sdk/tracer/: tracer_can_parser.h
src/: mobile_base.cpp
